<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>dataio-commons</artifactId>
        <groupId>dk.dbc</groupId>
        <version>2.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>dataio-javascript</artifactId>
    <name>javascript</name>

    <dependencies>
        <dependency>
            <groupId>dk.dbc</groupId>
            <artifactId>dbc-jslib</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.postgresql</groupId>
                    <artifactId>postgresql</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>oracle</groupId>
                    <artifactId>ojdbc7</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>dk.dbc</groupId>
            <artifactId>dataio-commons-types</artifactId>
        </dependency>
        <dependency>
            <groupId>dk.dbc</groupId>
            <artifactId>dataio-commons-utils-svn</artifactId>
        </dependency>
        <dependency>
            <groupId>dk.dbc</groupId>
            <artifactId>dataio-commons-utils-stopwatch</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjdk.nashorn</groupId>
            <artifactId>nashorn-core</artifactId>
            <version>15.4</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
